--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
       </section>
       <section class="section" id="chefs-section">
         <div class="container">
-          <h2 class="chefs-title section-title">
+          <h2 class="chefs-title section-title centered">
             Наші найкращі <span class="accent">шеф-кухарі</span>
           </h2>
           <ul>
             <li>
               <article>
+                <img class="chef-photo" src="./images/Nastya.jpg" alt="Nastya">
                 <h3 class="chef-title">Настя</h3>
                 <p>Привіт, я Настя!</p>
                 <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
@@ -95,6 +96,7 @@
             </li>
             <li>
               <article>
+                <img class="chef-photo" src="./images/Vlad.jpg" alt="Vlad">
                 <h3 class="chef-title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
@@ -109,7 +111,7 @@
       </section>
       <section class="section" id="formats-section">
         <div class="container">
-          <h2 class="formats-title section-title">Формати</h2>
+          <h2 class="formats-title section-title centered">Формати</h2>
           <ul class="formats-list">
             <li class="formats-item">
               <article class="format-card">
@@ -171,7 +173,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
       <div class="container">
         <nav>
           <a href="/index.html">
