add Insta and Facebook icons, and Lef-Right arrow in Formats section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
           <ul>
             <li>
               <article>
-                <img class="chef-photo" src="./images/Nastya.jpg" alt="Nastya">
+                <img
+                  class="chef-photo"
+                  src="./images/Nastya.jpg"
+                  alt="Nastya"
+                />
                 <h3 class="chef-title">Настя</h3>
                 <p>Привіт, я Настя!</p>
                 <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
@@ -96,7 +100,7 @@
             </li>
             <li>
               <article>
-                <img class="chef-photo" src="./images/Vlad.jpg" alt="Vlad">
+                <img class="chef-photo" src="./images/Vlad.jpg" alt="Vlad" />
                 <h3 class="chef-title">Влад</h3>
                 <p>Привіт, я Влад!</p>
                 <p>
@@ -112,6 +116,11 @@
       <section class="section" id="formats-section">
         <div class="container">
           <h2 class="formats-title section-title centered">Формати</h2>
+          <button class="carousel-button" type="button">
+            <svg class="carousel-arrow" width="16" height="16">
+              <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
           <ul class="formats-list">
             <li class="formats-item">
               <article class="format-card">
@@ -119,11 +128,8 @@
                 <div class="format-text">
                   <p>Площа: до 120 м2</p>
                   <p>Меню: розширене меню</p>
-                  <p>
-                    Штат: 2 продавці-касири, 2 пекарі, 2
-                  </p>
-                  <p> помічники пекаря, 2
-                    офіціанти-різнороби</p>
+                  <p>Штат: 2 продавці-касири, 2 пекарі, 2</p>
+                  <p>помічники пекаря, 2 офіціанти-різнороби</p>
                   <p>Посадкові місця: є</p>
                 </div>
               </article>
@@ -134,7 +140,7 @@
                 <div class="format-text">
                   <p>Площа: до 25 м2</p>
                   <p>Меню: найпопулярніші позиції меню</p>
-                  <p>Штат: 2 продавці-касири, 2 пекарі, 1 </p>
+                  <p>Штат: 2 продавці-касири, 2 пекарі, 1</p>
                   <p>помічник пекаря</p>
                   <p>Посадкові місця: відсутні</p>
                 </div>
@@ -146,13 +152,18 @@
                 <div class="format-text">
                   <p>Площа: до 15 м2</p>
                   <p>Меню: найпопулярніші позиції меню</p>
-                  <p>Штат: 1 продавець, 1 пекар, 1 помічник </p>
+                  <p>Штат: 1 продавець, 1 пекар, 1 помічник</p>
                   <p>пекаря</p>
                   <p>Посадкові місця: відсутні</p>
                 </div>
               </article>
             </li>
           </ul>
+          <button class="carousel-button" type="button">
+            <svg class="carousel-arrow" width="16" height="16">
+              <use href="./images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
         </div>
       </section>
       <section class="section" id="contacts-section">
@@ -209,11 +220,17 @@
               </a>
             </li>
             <li>
-              <a href="#">
-                <!--Facebook icon-->
+              <a href="https://www.facebook.com/">
+                <svg class="adress-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                <!-- <img src="./images/facebook_black_logo_icon_147136 1.svg" alt="Facebook-icon"> -->
               </a>
-              <a href="#">
-                <!--Insta icon-->
+              <a href="https://www.instagram.com/">
+                <svg class="adress-icon" width="32" height="32">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                <!-- <img src="./images/instagram_black_logo_icon_147122 1.svg" alt="Instagram-icon"> -->
               </a>
             </li>
           </ul>
