add animation to modal window and formats section. rotate right carousel button, resize her-section background image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="/CSS/styles.css" />
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container">
         <div class="header-container">
           <nav class="header-nav">
@@ -273,12 +273,10 @@
         </div>
       </div>
     </footer>
-
-    <div class="backdrop">
+    <div class="backdrop is-hidden">
       <div class="modal">
         <button type="button" class="modal-btn-close">Close</button>
       </div>
-      
     </div>
     <script src="/js/modal.js"></script>
   </body>
