--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
   <body>
     <header class="header">
       <div class="container">
-        <div class="header-container">
-          <nav class="header-nav">
+        <div class="header__container">
+          <nav class="header__nav">
             <a href="/index.html">
               <img src="./images/logo.svg" alt="Логотип суасної пекарні" />
             </a>
-            <ul class="header-menu">
+            <ul class="header__menu">
               <li>
                 <a class="link" href="#traditions-section">Наші традиції</a>
               </li>
@@ -41,65 +41,78 @@
     <main>
       <section class="hero-section">
         <div class="container">
-          <h1 class="hero-title">
-            <span class="accent">Сучасна</span> пекарня
+          <h1 class="hero-section__title">
+            <span class="text-brand">Сучасна</span> пекарня
           </h1>
         </div>
       </section>
       <section class="advantages-section">
         <h2 class="visually-hidden">Наші переваги</h2>
         <div class="container">
-          <ul class="advatages-list">
-            <li class="advantages-item">Великий попит на ринку</li>
-            <li class="advantages-item">Доступні за бюджетом формати</li>
-            <li class="advantages-item">Досвідчена управлінська команда</li>
+          <ul class="advantages-section__list">
+            <li class="advantages-section__item">Великий попит на ринку</li>
+            <li class="advantages-section__item">
+              Доступні за бюджетом формати
+            </li>
+            <li class="advantages-section__item">
+              Досвідчена управлінська команда
+            </li>
           </ul>
         </div>
       </section>
       <section class="traditions-section section" id="traditions-section">
         <div class="container">
-          <div class="traditions-container">
-            <div class="traditions-content">
-              <h2 class="traditions-title section-title">
+          <div class="traditions-section__container">
+            <div class="traditions-section__content">
+              <h2 class="traditions-section__title section__title">
                 Новий формат <br />
                 традицій
               </h2>
-              <p class="traditions-text">
-                <span class="brand uppercase">shop bakery</span> — це пекарня,
-                яка взяла все найкраще, і зберегла смак <br />
+              <p class="traditions-section__text">
+                <span class="text-brand text-bold text-uppercase"
+                  >shop bakery
+                </span>
+                — це пекарня, яка взяла все найкраще, і зберегла смак <br />
                 традиційної випічки та натуральність інгредієнтів.
               </p>
-              <p class="traditions-text">
+              <p
+                class="traditions-section__text traditions-section__text--limited"
+              >
                 Ми працюємо як найвідоміші мережі —
-                <span class="brand">5 хвилин і замовлення готове</span>. А ще у
-                наших пекарень стильний дизайн та висока якість обслуговування!
+                <span class="text-brand text-bold"
+                  >5 хвилин і замовлення готове
+                </span>
+                . А ще у наших пекарень стильний дизайн та висока якість
+                обслуговування!
               </p>
             </div>
             <img
-              class="traditions-section-photo"
+              class="traditions-section__photo"
               src="./images/bacer-man.jpg"
               alt="Чоловік пекар дивиться на батони із посмішкою"
             />
           </div>
         </div>
       </section>
-      <section class="section" id="chefs-section">
+      <section class="chefs-section section" id="chefs-section">
         <div class="container">
-          <h2 class="chefs-title section-title centered">
+          <h2
+            class="chefs-section__title section__title section__title--centered"
+          >
             Наші найкращі <br />
-            <span class="accent">шеф-кухарі</span>
+            <span class="text-brand-dark">шеф-кухарі</span>
           </h2>
-          <ul class="chefs-list">
-            <li class="chefs-item">
+          <ul class="chefs-section__list">
+            <li class="chefs-section__item">
               <article class="chef-card">
                 <img
-                  class="chef-photo"
+                  class="chef-card__photo"
                   src="./images/Nastya.jpg"
                   alt="Nastya"
                 />
                 <div>
-                  <h3 class="chef-title">Настя</h3>
-                  <div class="chef-text">
+                  <h3 class="chef-card__title">Настя</h3>
+                  <div class="chef-card__text">
                     <p>Привіт, я Настя!</p>
                     <p>
                       Вже 10 років, я втілюю <br />
@@ -113,12 +126,16 @@
                 </div>
               </article>
             </li>
-            <li class="chefs-item">
+            <li class="chefs-section__item">
               <article class="chef-card">
-                <img class="chef-photo" src="./images/Vlad.jpg" alt="Vlad" />
+                <img
+                  class="chef-card__photo"
+                  src="./images/Vlad.jpg"
+                  alt="Vlad"
+                />
                 <div>
-                  <h3 class="chef-title">Влад</h3>
-                  <div class="chef-text">
+                  <h3 class="chef-card__title">Влад</h3>
+                  <div class="chef-card__text">
                     <p>Привіт, я Влад!</p>
                     <p>
                       Мій кодитерський стаж вже 18 років. SHOP BAKERY - це наша
@@ -133,25 +150,29 @@
           </ul>
         </div>
       </section>
-      <section class="section" id="formats-section">
+      <section class="formats-section section" id="formats-section">
         <div class="container">
-          <h2 class="formats-title section-title centered">Формати</h2>
-          <div class="formats-container">
+          <h2
+            class="formats-section__title section__title section__title--centered"
+          >
+            Формати
+          </h2>
+          <div class="formats-section__container">
             <button class="carousel-button" type="button">
               <svg class="carousel-arrow" width="16" height="16">
                 <use href="./images/icons.svg#icon-arrow"></use>
               </svg>
             </button>
-            <ul class="formats-list">
-              <li class="formats-item">
+            <ul class="formats-section__list">
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="format-card__image"
                     src="./images/Walsrus.jpg"
                     alt="Walrus format"
                   />
-                  <h3 class="format-title" lang="en">Walrus</h3>
-                  <div class="format-text">
+                  <h3 class="format-card__title" lang="en">Walrus</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 120 м2</p>
                     <p>Меню: розширене меню</p>
                     <p>Штат: 2 продавці-касири, 2 пекарі, 2</p>
@@ -160,15 +181,15 @@
                   </div>
                 </article>
               </li>
-              <li class="formats-item">
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="format-card__image"
                     src="./images/Horseshoe.jpg"
                     alt="Horseshoe format"
                   />
-                  <h3 class="format-title" lang="en">Horseshoe</h3>
-                  <div class="format-text">
+                  <h3 class="format-card__title" lang="en">Horseshoe</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 25 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
                     <p>Штат: 2 продавці-касири, 2 пекарі, 1</p>
@@ -177,15 +198,15 @@
                   </div>
                 </article>
               </li>
-              <li class="formats-item">
+              <li class="formats-section__item">
                 <article class="format-card">
                   <img
-                    class="format-image"
+                    class="format-card__image"
                     src="./images/Handlebar.jpg"
                     alt="Horseshoe format"
                   />
-                  <h3 class="format-title" lang="en">Handlebar</h3>
-                  <div class="format-text">
+                  <h3 class="format-card__title" lang="en">Handlebar</h3>
+                  <div class="format-card__text">
                     <p>Площа: до 15 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
                     <p>Штат: 1 продавець, 1 пекар, 1 помічник</p>
@@ -203,66 +224,66 @@
           </div>
         </div>
       </section>
-      <section class="contacts-section section" id="contacts-section">
+      <section class="contact-section section" id="contact-section">
         <div class="container">
-          <div class="contact-container">
-            <div class="contact-form">
-              <h2 class="contact-title section-title">
+          <div class="contact-section__container">
+            <div class="contact-section__form">
+              <h2 class="contact-section__title section__title">
                 Приєднуйтеся до мережі пекарень
               </h2>
-              <p class="contact-text">
+              <p class="contact-section__text">
                 Заповни форму, щоб ми звʼязались з тобою!
               </p>
-              <form name="contact-form" autocomplete="off">
-                <div class="form-field">
+              <form class="contact-form" name="contact-form" autocomplete="off">
+                <div class="contact-section__form-field input">
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="text"
                     placeholder=" "
                     id="user-name"
                     name="user-name"
                   />
-                  <label class="form-label" for="user-name">Ім'я</label>
+                  <label class="input__label" for="user-name">Ім'я</label>
                 </div>
 
-                <div class="form-field">
+                <div class="contact-section__form-field input">
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="tel"
                     placeholder=" "
                     id="user-tel"
                     name="user-tel"
                     pattern="^\+[0-9]{12}"
                   />
-                  <label class="form-label" for="user-tel">Телефон</label>
+                  <label class="input__label" for="user-tel">Телефон</label>
                 </div>
 
-                <div class="form-field">
+                <div class="contact-section__form-field input">
                   <input
-                    class="form-input"
+                    class="input__control"
                     type="email"
                     placeholder=" "
                     id="user-email"
                     name="user-email"
                   />
-                  <label class="form-label" for="user-email"
+                  <label class="input__label" for="user-email"
                     >Електронна пошта</label
                   >
                 </div>
 
-                <button class="button form-button" type="submit">
+                <button class="contact-section__button button" type="submit">
                   Замовити дзвінок
                 </button>
                 <p class="form-terms">
-                  Натискаючи на кнопку я погоджуюсь
-                  <a class="form-terms-link" href="#"
-                    >з політикою конфіденційності</a
+                  Натискаючи на кнопку я погоджуюсь з
+                  <a class="form-terms__link" href="#"
+                    >політикою конфіденційності</a
                   >
                 </p>
               </form>
             </div>
             <iframe
-              class="contact-map"
+              class="contact-section__map"
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1suk!2sua!4v1764170109834!5m2!1suk!2sua"
               width="603"
               height="595"
@@ -340,31 +361,31 @@
     </footer>
     <div class="backdrop is-hidden">
       <div class="modal">
-        <button type="button" class="modal-btn-close">
-          <svg class="modal-arrow" width="32" height="32">
+        <button type="button" class="modal__btn-close modal-btn-close">
+          <svg class="modal__arrow" width="32" height="32">
             <use href="./images/icons.svg#icon-cross1"></use>
           </svg>
         </button>
-        <h2 class="modal-title">Замовити дзвінок</h2>
-        <p class="modal-text">
+        <h2 class="modal__title">Замовити дзвінок</h2>
+        <p class="modal__text">
           Залишіть заявку та наш спеціаліст зв'яжеться з Вами!
         </p>
-        <form name="modal-form" autocomplete="off">
-          <div class="form-field">
+        <form name="modal__form" autocomplete="off">
+          <div class="modal__form-field input">
             <input
-              class="form-input"
+              class="input__control"
               type="text"
               placeholder=" "
               id="user-name-modal"
               name="user-name-modal"
               required
             />
-            <label class="form-label" for="user-name-modal">Ім'я</label>
+            <label class="input__label" for="user-name-modal">Ім'я</label>
           </div>
 
-          <div class="form-field">
+          <div class="modal__form-field input">
             <input
-              class="form-input"
+              class="input__control"
               type="tel"
               placeholder=" "
               id="user-tel-modal"
@@ -372,29 +393,31 @@
               required
               pattern="^\+[0-9]{12}"
             />
-            <label class="form-label" for="user-tel-modal">Телефон</label>
+            <label class="input__label" for="user-tel-modal">Телефон</label>
           </div>
 
-          <div class="form-field">
+          <div class="modal__form-field input">
             <input
-              class="form-input"
+              class="input__control"
               type="email"
               placeholder=" "
               id="user-email-modal"
               name="user-email-modal"
               required
             />
-            <label class="form-label" for="user-email-modal">
+            <label class="input__label" for="user-email-modal">
               Електронна пошта</label
             >
           </div>
 
-          <button class="button form-button" type="submit">
+          <button class="modal__button button" type="submit">
             Замовити дзвінок
           </button>
           <p class="form-terms">
             Натискаючи на кнопку я погоджуюсь
-            <a class="form-terms-link" href="#">з політикою конфіденційності</a>
+            <a class="form-terms__link" href="#"
+              >з політикою конфіденційності</a
+            >
           </p>
         </form>
       </div>
