виправив багато помилок адаптивності

--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
               <li><a class="link" href="#contacts-section">Контакти</a></li>
             </ul>
           </nav>
-          <button class="button modal-btn-open" type="button">
+          <button class="header__button button modal-btn-open" type="button">
             Замовити дзвінок
+          </button>
+          <button class="header__burger" type="button">
+            <svg class="address-icon" width="32" height="32">
+                    <use href="./images/icons.svg#icon-menu"></use>
+                  </svg>
           </button>
         </div>
       </div>
@@ -45,8 +50,8 @@
             <span class="text-brand">Сучасна</span> пекарня
           </h1>
         </div>
-      </section>
-      <section class="advantages-section">
+      </section> 
+      <!-- <section class="advantages-section">
         <h2 class="visually-hidden">Наші переваги</h2>
         <div class="container">
           <ul class="advantages-section__list">
@@ -59,8 +64,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="traditions-section section" id="traditions-section">
+      </section> -->
+      <!-- <section class="traditions-section section" id="traditions-section">
         <div class="container">
           <div class="traditions-section__container">
             <div class="traditions-section__content">
@@ -93,8 +98,8 @@
             />
           </div>
         </div>
-      </section>
-      <section class="chefs-section section" id="chefs-section">
+      </section> -->
+      <!-- <section class="chefs-section section" id="chefs-section">
         <div class="container">
           <h2
             class="chefs-section__title section__title section__title--centered"
@@ -149,8 +154,8 @@
             </li>
           </ul>
         </div>
-      </section>
-      <section class="formats-section section" id="formats-section">
+      </section> -->
+      <!-- <section class="formats-section section" id="formats-section">
         <div class="container">
           <h2
             class="formats-section__title section__title section__title--centered"
@@ -223,13 +228,13 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="contact-section section" id="contact-section">
+      </section> -->
+      <!-- <section class="contact-section section" id="contact-section">
         <div class="container">
           <div class="contact-section__container">
             <div class="contact-section__form">
               <h2 class="contact-section__title section__title">
-                Приєднуйтеся до мережі пекарень
+                Приєднуйся до мережі пекарень
               </h2>
               <p class="contact-section__text">
                 Заповни форму, щоб ми звʼязались з тобою!
@@ -294,9 +299,9 @@
             </iframe>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container">
         <div class="footer-container">
           <nav class="footer-nav">
@@ -339,13 +344,11 @@
                   <svg class="address-icon" width="32" height="32">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
-                  <!-- <img src="./images/facebook_black_logo_icon_147136 1.svg" alt="Facebook-icon"> -->
                 </a>
                 <a href="https://www.instagram.com/" target="_blank">
                   <svg class="address-icon" width="32" height="32">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
-                  <!-- <img src="./images/instagram_black_logo_icon_147122 1.svg" alt="Instagram-icon"> -->
                 </a>
               </li>
             </ul>
@@ -358,7 +361,7 @@
           </address>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <div class="backdrop is-hidden">
       <div class="modal">
         <button type="button" class="modal__btn-close modal-btn-close">
