--- a/index.html
+++ b/index.html
@@ -46,8 +46,28 @@
           </button>
           <div class="mobile-menu">
             <button class="mobile-menu__btn-close menu-btn-close" type="button">
-              Close
+              <svg class="modal__arrow" width="24" height="24">
+                <use href="./images/icons.svg#icon-cross1"></use>
+              </svg>
             </button>
+            <div class="mobile-menu__content">
+              <a href="./index.html" class="mobile-menu__logo">
+                SHOP<br /><span>BAKERY</span>
+              </a>
+
+              <nav>
+                <ul class="mobile-menu__list">
+                  <li>
+                    <a class="mobile-menu__link active" href="#"
+                      >Наші традиції</a
+                    >
+                  </li>
+                  <li><a class="mobile-menu__link" href="#chefs-section">Шеф-кухарі</a></li>
+                  <li><a class="mobile-menu__link" href="#formats-section">Формати</a></li>
+                  <li><a class="mobile-menu__link" href="#contact-section">Контакти</a></li>
+                </ul>
+              </nav>
+            </div>
           </div>
         </div>
       </div>
